# MIX

./: .gitignore  .project  AUTHORS  COPYING  README  mix
MIX/: .includepath  ChangeLog  FRCA_i2c.sxc  Mix.kpf  README  TODO.txt  a_clk-mixed.xls  a_clk.sxc  a_clk.xls  a_clk_i2c_alex.sxc  a_clk_i2c_alex.xls  a_clk_io.sxc  a_clk_io.xls  address_join.pl  bads.pl  howto.xls  joined.xls  mix  mix-be.pl  mix-vi2c.pl  mix_0.pl  mix_0.pl.out  mix_1.pl  mix_api_demo.pl  mix_appl.txt  mix_embedded.pl  mixlog.conf  mkswstub  tcs  vgch_join.pl  vgch_join.pl.out  xls2csv.pl
MIX/Resources/: README~  registermaster_template_frcv_urac.xls
MIX/Resources/Docu/: IOCELL.fm  IOCELL1.fm  MIX register-shell HOWTO for FRCV.ppt  MIX register-shell HOWTO for VCTV.ppt  MIX_Specification.xls  Workshop.doc
MIX/Resources/doc_old/: a-e-e.txt  mix_develop.html  mix_howto.html  mix_howto.txt  release_20030605.txt  release_20060411.txt
MIX/contrib/: mix_template-conf-c.vhd  mix_template-e.vhd  mix_template-rtl-a.vhd
MIX/doc/: MIX-I2C-Spec.tex  MIX_DeveloperManual.html  MIX_Development_doc.tex  MIX_Reg_Development_doc.lyx  MIX_UserManual.html  MIX_Userreference.lyx  MIX_Userreference.tex  Makefile  README  converted.lyx  lyx_test.lyx  mix_howto.txt  mix_userref.doc  pares_lyx.pl  release_20030709.txt  release_20030716.txt  release_20031029.txt  release_20051019.txt  release_20060314.txt  release_20060411.txt  release_20070316.txt
MIX/doc/images/: serial_iic_reg.dia
MIX/doc_new/: MIX_UserManual.html
MIX/howto/: howto-a.vhd  howto-c.vhd  howto-debug.bat  howto-e.vhd  howto-mixed.xls  howto-update.bat  howto.bat  howto.pld  mix.cfg
MIX/lib/perl/: ooolib.pm
MIX/lib/xslt/: from1.0_to_1.1.xsl  from1.1_to_1.2.xsl
MIX/mui/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  mkinstalldirs  mui.glade.bak  mui.gladep
MIX/mui/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
MIX/mui/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  config.h.in  connview.c  connview.h  cscope.out  files.c  files.h  hierview.c  hierview.h  i2cview.c  i2cview.h  iopadview.c  iopadview.h  main.c  mainwindow.c  mainwindow.h  mix-interface.c  mix-interface.h  mix.c  mix.h  options.h  perlxsi.h  settings.c  settings.h  support.c  support.h  tableview.c  tableview.h  tablewindow.c  tablewindow.h  test  user-interface.c  user-interface.h
MIX/template/: mix.cfg  mix.xls  mix_template-rtl-a.vhd
MIX/test/: MixTest  MixTest.pl  README  scan_testcases.pl  status.pl  t.pl  test.out  test.pl  xls2csv.pl
MIX/test/results/: a_clk_i2c.sxc  autoopen.csv  autoopen.sxc  autoopen.xls  bitsplice.csv  bitsplice.sxc  bitsplice.xls  bug20030516.sxc  bugver.csv  bugver.sxc  bugver.xls  bugver2006.xls  case.sxc  case.xls  conf.csv  conf.sxc  conf.xls  configuration.sxc  configuration.xls  constant.csv  constant.sxc  constant.xls  generic.csv  generic.sxc  generic.xls  genwidth.sxc  genwidth.xls  hier.xls  highlow.csv  highlow.sxc  highlow.xls  init.sxc  io.sxc  (+31 more)
MIX/vgch_join/: input_files.list  joined.xls  mix.cfg  vgch_join.pl.out
Resources/: README  mix_cfg_generator_vctv.xls  registermaster_template_frcv_ihb.xls  registermaster_template_ihb.xls  registermaster_template_vctv.xls
Resources/Docu/: MIX_Intro_Old.ppt  mix_api_05022009.ppt  mix_short_intro_trd_eng_symposium_062009.ppt  mix_update_05022009.ppt
Resources/Examples/: howto.xls  mix.xls
Resources/doc_old/: EDP2003_final.doc  EDP2003_final_030331.doc  MIX_Intro-wig.ppt  MIX_Userreference.lyx  example.xls  mix_develop.txt  release_20060119.txt
lib/perl/: XML  ooolib.pm
lib/xslt/: from1.2_to_1.4.xsl  from1.2_to_1.4_abstractionDef.xsl
mui/: AUTHORS  ChangeLog  autogen.sh  config.status  configure.ac
mui/src/: Makefile.am  callbacks.c  connview.c  hierview.c  hierview.h  i2cview.c  i2cview.h  mix.c  mix.h  options.h  support.c
template/: mix_template-conf-c.vhd  mix_template-e.vhd  template_class.pm
test/: MixTest.pl  README  t.pl  test.out
test/results/: bitsplice.xls  bug20030516.csv  bug20030516.sxc  bug20030516.xls  bugver.xls  case.sxc  conf.sxc  configuration.csv  configuration.sxc  constant.sxc  generic.sxc  generic.xls  genwidth.csv  highlow.sxc  intra.xls  io.csv  io.xls  logic.csv  macro.sxc  macro.xls  mde_tests.sxc  open.csv  open.xls  padio.sxc  padio2.sxc  padio2.xls  sigport.xls  typecast.sxc  udc.csv  udc.xls  verify.sxc  verify.xls  verilog.csv  verilog.sxc
(+2614 files in other folders)
